# EditCookieMalaccamax

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PRE_FLIGHT_CHECKLIST.md  PRIVACY.md  README.md  SECURITY.md  _config.yml  debug-extension.js  package-lock.json  package.json  playwright.config.js
.github/workflows/: security-audit.yml
assets/styles/: devtools.css  options.css  popup.css
docs/: README.md
docs/architecture/: OVERVIEW.md
docs/guides/: DEVELOPER.md
public/: options.html  popup.html
public/css/: devtools.css  options.css  popup.css
public/devtools/: devtools-page.html  panel.html
public/js/: devtools-page.js
scripts/: Build-Extension.ps1  Verify-Build.ps1  build.ps1  debug-extension.ps1  fix-manifest.ps1  fix-popup.ps1  launch-chrome.ps1  reload-and-test.ps1  run-tests.ps1  secret-scanner.js
src/: chrome_api.rs  lib.rs
src/background/: context_menus.rs  cookie_monitor.rs  devtools.rs  mod.rs
src/core/: cookie.rs  mod.rs  rules.rs  storage.rs
src/devtools/: mod.rs
src/options/: mod.rs  preferences.rs
src/popup/: cookie_editor.rs  cookie_list.rs  mod.rs  search.rs
src/shared/: helpers.rs  known_cookies.rs  mod.rs  types.rs
tests/: extension.spec.js  fixtures.js
