[package]
name = "edit-cookie-malaccamax"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
oxichrome = { version = "0.2" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
leptos = { version = "0.8", features = ["csr"] }
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Navigator",
    "Clipboard",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "DomTokenList",
    "Event",
    "MouseEvent",
    "EventTarget",
] }
js-sys = "0.3"
